# vlsi-ai-experiments

./: .gitignore  AGENTS.md  CONTRIBUTING.md  High-value-next-steps.md  README.md  ROADMAP.md  requirements.txt  setup.cfg  setup.py  ui-review.md
.github/workflows/: ci.yml  docker.yml
PROMPTS/: design_agent.md  docs_agent.md  layout_agent.md  ml_agent.md
api/: server.py
bandgap/: README.md  __init__.py  runner.py  specs.yaml
bandgap/netlists/: bandgap_simple.sp
config/: tech_placeholder.yaml
data_gen/: __init__.py  sweep_bandgap.py
datasets/: README.md  bandgap_sweep_real_sky130.csv
docker/: Dockerfile.app  Dockerfile.engine  docker-compose.yml
docs/: docker_engine_guide.md  prd_design_education.md
examples/: README.md  bo_vs_grid.py  demo_dataset.csv  generate_reference_dataset.py  ihp_sg13g2_bandgap.sp  open_data_guide.md  run_full_pipeline.py  sky130_bandgap.sp
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js
frontend/e2e/: app.spec.js
frontend/src/: App.jsx  index.css
layout/: __init__.py  data_stub.py  evaluate.py  patch_model.py
ml/: __init__.py  evaluate_surrogate_loop.py  optimize.py  surrogate.py
pdk/sky130/: README.md  sky130_bandgap_tt.lib
results/: README.md
results/projects/: ui_state_20260304_181042.json  ui_state_20260304_194926.json
tests/: test_api.py  test_bandgap_runner.py  test_cli.py  test_config.py  test_data_gen.py  test_evaluate_loop.py  test_layout.py  test_optimize.py  test_surrogate.py
vlsi_ai/: __init__.py  cli.py
