[metadata]
name = vlsi-ai-experiments
version = 0.1.0
description = ML-assisted bandgap reference design optimisation toolkit
long_description = file: README.md
author = vlsi-ai contributors
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24,<3
    pandas>=2.0,<3
    scipy>=1.10,<2
    scikit-learn>=1.3,<2
    PyYAML>=6.0,<7
    matplotlib>=3.7,<4
    flask>=3.0,<4
    flask-cors>=4.0,<6
    # Note: flask and flask-cors are used by api/server.py (REST API layer)

[options.entry_points]
console_scripts =
    vlsi-ai = vlsi_ai.cli:main

[flake8]
max-line-length = 100
exclude =
    .venv,
    __pycache__,
    .git,
    build,
    dist,
    *.egg-info
# Ignore: E501 handled by max-line-length, W503 (line break before binary operator)
extend-ignore = W503

[tool:pytest]
testpaths = tests
markers =
    slow: mark test as slow (deselect with -m "not slow")
    requires_ngspice: mark test as requiring ngspice to be installed
